--- a/src/layouts/heroes/ArticlesHero.astro
+++ b/src/layouts/heroes/ArticlesHero.astro
@@ -3,9 +3,9 @@ const { title, lead } = Astro.props;
 ---
 
 
-<section class="relative pt-42 pb-20">
-    <div class="pointer-events-none absolute inset-y-0 left-1/2 w-screen -translate-x-1/2 bg-black"></div>
-  <div class="relative space-y-4">
+<section class="relative pt-42 pb-78">
+  <div class="pointer-events-none absolute inset-y-0 left-1/2 w-screen -translate-x-1/2 bg-black"></div>
+  <div class="relative space-y-4 mx-auto max-w-3xl">
     <p class="text-xs font-semibold text-[var(--accent)]">Strona główna | Artykuły</p>
     <h1 class="text-4xl font-semibold tracking-tight text-white sm:text-5xl">
       {title}
