--- a/src/layouts/heroes/PageHero.astro
+++ b/src/layouts/heroes/PageHero.astro
@@ -1,5 +1,5 @@
 ---
-const { title } = Astro.props;
+const { title, lead } = Astro.props;
 ---
 
 <section class="relative pt-42 pb-20">
@@ -9,8 +9,6 @@ const { title } = Astro.props;
     <h1 class="text-4xl font-semibold tracking-tight text-white sm:text-5xl">
       {title}
     </h1>
-    <p class="max-w-2xl text-base text-gray-400">             </p> 
+    {lead ? <p class="max-w-2xl text-base text-gray-400">{lead}</p> : null}
   </div>
 </section>
-
-
