--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Testimonials from "../components/home/Testimonials.astro";
 import CallToAction from "../components/home/CallToAction.astro";
 import BentoGrid from "../components/home/BentoGrid.astro";
 import LatestPosts from "../components/home/LatestPosts.astro";
+import ClientsLogos from "../components/home/ClientsLogos.astro";
 ---
 
 <BaseLayout
@@ -15,8 +16,6 @@ import LatestPosts from "../components/home/LatestPosts.astro";
   showHero={false}
 >
 	<Hero />
-	<BentoGrid />
-	<Services />
 	<FeaturedWork />
 	<Testimonials />
 	<LatestPosts />
