--- a/src/layouts/heroes/RealizacjeHero.astro
+++ b/src/layouts/heroes/RealizacjeHero.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from "astro:assets";
 const { title, lead } = Astro.props;
 ---
 
@@ -18,11 +19,13 @@ const { title, lead } = Astro.props;
     </div>
     <div class="relative min-h-[320px] lg:min-h-full">
       <div class="absolute inset-0 right-[-50vw] bg-neutral-900 group overflow-hidden">
-        <img 
+        <Image
           src="/src/assets/images/sections/blog-responsive.jpg" 
           alt="Proces projektowy" 
           class="size-full object-cover grayscale opacity-80 group-hover:grayscale-0 group-hover:scale-105 transition-all duration-700"
-        />
+          widths={[320, 480, 768]}
+          sizes="(max-width: 1024px) 100vw, 420px"
+      />
         <div class="lg:hidden absolute right-[50vw] top-0 w-24 h-24 bg-[var(--accent)] z-20"></div>
       </div>
       <div class="hidden lg:block absolute left-0 bottom-32 w-32 h-32 bg-white z-20"></div>
