--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -33,6 +33,7 @@ const ogImageUrl = site ? new URL(ogImage.src, site).toString() : ogImage.src;
     <link rel="icon" type="image/png" href={faviconPng.src} />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="google-site-verification" content="_uLorccZIpY-NlRb036yMXgs2lvctMD5A_aSlU6HRa4" />
     <title>{pageTitle}</title>
     <meta name="description" content={metaDescription} />
     <meta property="og:title" content={pageTitle} />
