--- a/src/pages/kontakt/index.astro
+++ b/src/pages/kontakt/index.astro
@@ -16,10 +16,10 @@ const contact = {
   title="Kontakt"
   description="Napisz lub zadzwon, opowiedz o projekcie i otrzymaj odpowiedz w 24-48h."
 >
-  <section class="pb-16 pt-16 grid gap-10 lg:grid-cols-[minmax(0,1fr)_minmax(0,1fr)] lg:gap-12">
+  <section class="pb-16 pt-16 grid gap-4 lg:gap-10 lg:grid-cols-[minmax(0,1fr)_minmax(0,1fr)] lg:gap-12">
     <div class="space-y-6">
       <div class="space-y-2">
-        <p class="max-w-xl font-semibold text-3xl">
+        <p class="max-w-xl font-semibold text-2xl md:text-3xl">
           Opisz jaki cel ma relizowac strona, termin wykonania i budżet
         </p>
         <p class="max-w-xl text-base text-[var(--muted)]">
